# battleye-rust

./: Cargo.toml  LICENSE  README.md
examples/: listen_to_socket.rs  read_write_to_socket.rs
src/: lib.rs
src/battleye_rcon/: battle_eye_rcon_service.rs  rcon_socket_connection.rs
src/remote_console/: com.rs  mod.rs  packet.rs
src/remote_console/hash/: checksum.rs  crc32.rs  mod.rs
src/socket/: action.rs  mod.rs  udp.rs
