[package]
name = "battleye-rust"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/steffalon/battleye-rust"
readme = "README.md"
description = """
Simplify authentication, acknowledge automation, input validation and sending commands using BattlEye
RCON UDP connection.
"""
categories = ["authentication", "network-programming"]
keywords = ["battleye", "rcon", "library"]
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.1"
